force-app/main/default/objects/MRIS_Application__c/MRIS_Application__c.object-meta.xml
<CustomObject>
    <label>MRIS Application</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ApplicationID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRIGHT Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>