force-app/main/default/objects/MRIS_Application__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <formula>Agent_Subscription_ID__r.Contact__r.FirstName&amp; &quot; &quot; &amp; Agent_Subscription_ID__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>