force-app/main/default/objects/MRIS_Application__c/fields/Agent_Office_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office_Fax__c</fullName>
    <label>Agent Office Fax</label>
    <type>Phone</type>
</CustomField>