force-app/main/default/objects/MRIS_Application__c/fields/Agent_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipName>MRIS_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>