force-app/main/default/objects/MRIS_Application__c/fields/Application_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Expire_Date__c</fullName>
    <label>Application Expire Date</label>
    <type>DateTime</type>
</CustomField>