force-app/main/default/objects/MRIS_Application__c/fields/Application_Key__c.field-meta.xml
<CustomField>
    <fullName>Application_Key__c</fullName>
    <displayFormat>APP-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Application Key</label>
    <type>AutoNumber</type>
</CustomField>