force-app/main/default/objects/MRIS_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Agent</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Agent Transfer</fullName>
            </value>
            <value>
                <fullName>IDX and VOW Agent Request</fullName>
            </value>
            <value>
                <fullName>Team Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>