force-app/main/default/objects/MRIS_Application__c/fields/Appraiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Appraiser_Name__c</fullName>
    <formula>Appraiser_Subscription_ID__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Appraiser_Subscription_ID__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraiser Name</label>
    <type>Text</type>
</CustomField>