force-app/main/default/objects/MRIS_Application__c/fields/Appraiser_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Appraiser_Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraiser Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipName>MRIS_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>