force-app/main/default/objects/MRIS_Application__c/fields/Approved_Rejected_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Status_Message__c</fullName>
    <label>Approved/Rejected Status Message</label>
    <type>TextArea</type>
</CustomField>