force-app/main/default/objects/MRIS_Application__c/fields/AS_Email__c.field-meta.xml
<CustomField>
    <fullName>AS_Email__c</fullName>
    <label>AS Email</label>
    <type>Email</type>
</CustomField>