force-app/main/default/objects/MRIS_Application__c/fields/Association_Board_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Association_Board_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association/Board Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Association</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>MRIS_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>