force-app/main/default/objects/MRIS_Application__c/fields/Authorized_Use__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Use__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDX</fullName>
                <label>IDX Website</label>
            </value>
            <value>
                <fullName>Broker Only</fullName>
            </value>
            <value>
                <fullName>VOW</fullName>
                <label>VOW Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>