force-app/main/default/objects/MRIS_Application__c/fields/Billing_Addl_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Addl_Display_Name__c</fullName>
    <label>Billing Addl Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>