force-app/main/default/objects/MRIS_Application__c/fields/Billing_Box__c.field-meta.xml
<CustomField>
    <fullName>Billing_Box__c</fullName>
    <label>Billing Box #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>