force-app/main/default/objects/MRIS_Application__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNITED STATES</fullName>
                <default>true</default>
                <label>UNITED STATES</label>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>