force-app/main/default/objects/MRIS_Application__c/fields/Billing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Jurisdiction__c</fullName>
    <label>Billing Jurisdiction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>