force-app/main/default/objects/MRIS_Application__c/fields/Billing_Street_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Number_Suffix__c</fullName>
    <label>Billing Street Number Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>