force-app/main/default/objects/MRIS_Application__c/fields/Billing_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit_Number__c</fullName>
    <label>Billing Unit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>