force-app/main/default/objects/MRIS_Application__c/fields/BOR_Email__c.field-meta.xml
<CustomField>
    <fullName>BOR_Email__c</fullName>
    <label>BOR Email</label>
    <type>Email</type>
</CustomField>