force-app/main/default/objects/MRIS_Application__c/fields/BOR_SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>BOR_SubscriptionID__c</fullName>
    <label>BOR SubscriptionID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>