force-app/main/default/objects/MRIS_Application__c/fields/Box__c.field-meta.xml
<CustomField>
    <fullName>Box__c</fullName>
    <label>Box #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>