force-app/main/default/objects/MRIS_Application__c/fields/Broker_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email_Id__c</fullName>
    <label>Broker Email Id</label>
    <type>Email</type>
</CustomField>