force-app/main/default/objects/MRIS_Application__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments Section for Deferred</description>
    <inlineHelpText>Comments Section for Deferred</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>