force-app/main/default/objects/MRIS_Application__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SFDC_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>