force-app/main/default/objects/MRIS_Application__c/fields/Copy_Address_to_Billing__c.field-meta.xml
<CustomField>
    <fullName>Copy_Address_to_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Address to Billing</label>
    <type>Checkbox</type>
</CustomField>