force-app/main/default/objects/MRIS_Application__c/fields/Date_Expires_Month__c.field-meta.xml
<CustomField>
    <fullName>Date_Expires_Month__c</fullName>
    <label>Date Expires Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sept</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>