force-app/main/default/objects/MRIS_Application__c/fields/Date_Expires_Year__c.field-meta.xml
<CustomField>
    <fullName>Date_Expires_Year__c</fullName>
    <label>Date Expires Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>