force-app/main/default/objects/MRIS_Application__c/fields/Deferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Date__c</fullName>
    <label>Deferred Date</label>
    <type>Date</type>
</CustomField>