force-app/main/default/objects/MRIS_Application__c/fields/Destination_Broker_Office__c.field-meta.xml
<CustomField>
    <fullName>Destination_Broker_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Broker office to which the agent has to be transferred</description>
    <label>Destination Broker Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Transferred_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>