force-app/main/default/objects/MRIS_Application__c/fields/Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Disabilities__c</fullName>
    <label>Disabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visually Impaired</fullName>
            </value>
            <value>
                <fullName>Wheelchair Access</fullName>
            </value>
            <value>
                <fullName>Hearing Impaired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>