force-app/main/default/objects/MRIS_Application__c/fields/Existing_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Subscriber_ID__c</fullName>
    <label>Existing Subscriber ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>