force-app/main/default/objects/MRIS_Application__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>