force-app/main/default/objects/MRIS_Application__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesperson</fullName>
            </value>
            <value>
                <fullName>Associate Broker</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>