force-app/main/default/objects/MRIS_Application__c/fields/NRDS_ID__c.field-meta.xml
<CustomField>
    <fullName>NRDS_ID__c</fullName>
    <label>NRDS ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>