force-app/main/default/objects/MRIS_Application__c/fields/Private_Phone__c.field-meta.xml
<CustomField>
    <fullName>Private_Phone__c</fullName>
    <label>Private Phone</label>
    <type>Phone</type>
</CustomField>