force-app/main/default/objects/MRIS_Application__c/fields/Professional_Designations__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designations__c</fullName>
    <label>Professional Designations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABR</fullName>
            </value>
            <value>
                <fullName>ABRM</fullName>
            </value>
            <value>
                <fullName>AHWD</fullName>
            </value>
            <value>
                <fullName>ALC</fullName>
            </value>
            <value>
                <fullName>BPOR</fullName>
            </value>
            <value>
                <fullName>CCIM</fullName>
            </value>
            <value>
                <fullName>CIPS</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>ePRO</fullName>
            </value>
            <value>
                <fullName>GAA</fullName>
            </value>
            <value>
                <fullName>GRI</fullName>
            </value>
            <value>
                <fullName>MRP</fullName>
            </value>
            <value>
                <fullName>PMN</fullName>
            </value>
            <value>
                <fullName>RAA</fullName>
            </value>
            <value>
                <fullName>RCE</fullName>
            </value>
            <value>
                <fullName>RSPS</fullName>
            </value>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>SIOR</fullName>
            </value>
            <value>
                <fullName>SRES</fullName>
            </value>
            <value>
                <fullName>SRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>