force-app/main/default/objects/MRIS_Application__c/fields/Public_Email__c.field-meta.xml
<CustomField>
    <fullName>Public_Email__c</fullName>
    <label>Public Email</label>
    <type>Email</type>
</CustomField>