force-app/main/default/objects/MRIS_Application__c/fields/Related_Agents__c.field-meta.xml
<CustomField>
    <fullName>Related_Agents__c</fullName>
    <label>Related Agents</label>
    <length>244</length>
    <type>Text</type>
</CustomField>