force-app/main/default/objects/MRIS_Application__c/fields/Send_Auto_approved_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Auto_approved_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Auto approved Email</label>
    <type>Checkbox</type>
</CustomField>